# xfce4-maximus-plugin

./: AUTHORS  Makefile.am  README  README.md  THANKS  configure.ac.in  deb_control.in  index.html  params.json
icons/48x48/: Makefile.am
icons/scalable/: Makefile.am
panel-plugin/: Makefile.am  maximus-dialogs.c  maximus-dialogs.h  maximus.c  maximus.cbp  maximus.desktop.in  maximus.h  maximus_wnck.c  maximus_wnck.h  maximus_wnd.h  maximus_xlib.c
panel-plugin/test/: main.c  maximus_xlib.c
po/: POTFILES.in  fr.po
